adaptive done question mark

--- a/layout.html
+++ b/layout.html
@@ -11,7 +11,7 @@
     <div class="section-social">
         <div class="section-social__container">
             <h4 class="section-social__title">Social Media</h4>
-            <h5 class="section-social__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>
+            <h5 class="section-social__subtitle">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. <br>
             Aenean euismod bibendum laoreet.</h5>
             <div class="section-social__icon-container">
                 <svg width="32" height="56" viewBox="0 0 32 56" fill="none" xmlns="http://www.w3.org/2000/svg" class="section-social__facebook-icon section-social__icon-cell">
