--- a/layout.html
+++ b/layout.html
@@ -174,5 +174,46 @@
             </div>
         </div>
     </div>
+    <div class="section-reviews">
+        <div class="section-reviews__container">
+            <div class="section-reviews__header">
+                <h2 class="section-reviews__header-title">what our customers are saying</h2>
+                <h5 class="section-reviews__header-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h5>
+            </div>
+            <div class="section-reviews__text-bubbles">
+                <div class="section-reviews__qoutes">Lorem ipsum dolor sit amet, <br>
+                consectetur adipisicing elit. Doloribus <br>
+                accusamus expedita repellat similique <br>
+                odio aspernatur ex, architecto eaque <br>
+                quo suscipit.</div>
+                <div class="section-reviews__qoutes">Lorem ipsum dolor sit amet, <br>
+                consectetur adipisicing elit. Doloribus <br>
+                accusamus expedita repellat similique <br>
+                odio aspernatur ex, architecto eaque <br>
+                quo suscipit.</div>
+                <div class="section-reviews__qoutes">Lorem ipsum dolor sit amet, <br>
+                consectetur adipisicing elit. Doloribus <br>
+                accusamus expedita repellat similique <br>
+                odio aspernatur ex, architecto eaque <br>
+                quo suscipit.</div>
+            </div>
+            <div class="section-reviews__employees-container">
+                <div class="section-reviews__employees">
+                    <img src="images/Davis.png" alt="image">
+                    <h4 class="section-reviews__employees-names">Davis Rhiel Madsen</h4>
+                    <h5 class="section-reviews__employess-positions">Manager</h5>
+                </div>
+            <div class="section-reviews__employees">
+                    <img src="images/Jaydon.png" alt="image">
+                    <h4 class="section-reviews__employees-names">Jaydon Rosser</h4>
+                    <h5 class="section-reviews__employess-positions">Manager</h5>
+            </div>
+            <div class="section-reviews__employees">
+                    <img src="images/Cooper.png" alt="image">
+                    <h4 class="section-reviews__employees-names">Cooper Dorwart</h4>
+                    <h5 class="section-reviews__employess-positions">Manager</h5>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
