another day another challenge

--- a/layout.html
+++ b/layout.html
@@ -137,39 +137,41 @@
                 <h2 class="section-pricing__header-title">pricing options</h2>
                 <h5 class="section-pricing__header-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h5>
             </div>
-            <div class="section-pricing__prices-container">
-                <div class="section-pricing__prices">
-                    <div class="section-pricing__prices-title">BASIC</div>
-                    <div class="section-pricing__prices-bucks">$10</div>
-                    <div class="section-pricing__prices-free">Free for life</div>
-                    <div class="section-pricing__prices-content">1 gb of space</div>
-                    <div class="section-pricing__prices-content">1 gb of space</div>
-                    <div class="section-pricing__prices-content">1 gb of space</div>
-                    <div class="section-pricing__prices-content">1 gb of space</div>
-                    <div class="section-pricing__prices-content">1 gb of space</div>
-                    <div class="section-pricing__prices-content">1 gb of space</div>
-                </div>
-                <div class="section-pricing__prices">
-                    <div class="section-pricing__prices-title">OPTIMA</div>
-                    <div class="section-pricing__prices-bucks">$20</div>
-                    <div class="section-pricing__prices-free">Free for life</div>
-                    <div class="section-pricing__prices-content">1 gb of space</div>
-                    <div class="section-pricing__prices-content">1 gb of space</div>
-                    <div class="section-pricing__prices-content">1 gb of space</div>
-                    <div class="section-pricing__prices-content">1 gb of space</div>
-                    <div class="section-pricing__prices-content">1 gb of space</div>
-                    <div class="section-pricing__prices-content">1 gb of space</div>
-                </div>
-                <div class="section-pricing__prices">
-                    <div class="section-pricing__prices-title">PRO</div>
-                    <div class="section-pricing__prices-bucks">$300</div>
-                    <div class="section-pricing__prices-free">Free for life</div>
-                    <div class="section-pricing__prices-content">1 gb of space</div>
-                    <div class="section-pricing__prices-content">1 gb of space</div>
-                    <div class="section-pricing__prices-content">1 gb of space</div>
-                    <div class="section-pricing__prices-content">1 gb of space</div>
-                    <div class="section-pricing__prices-content">1 gb of space</div>
-                    <div class="section-pricing__prices-content">1 gb of space</div>
+            <div class="section-pricing__footer">
+                <div class="section-pricing__prices-container">
+                    <div class="section-pricing__prices">
+                        <div class="section-pricing__prices-title">BASIC</div>
+                        <div class="section-pricing__prices-bucks">$10</div>
+                        <div class="section-pricing__prices-free">Free for life</div>
+                        <div class="section-pricing__prices-content">1 gb of space</div>
+                        <div class="section-pricing__prices-content">1 gb of space</div>
+                        <div class="section-pricing__prices-content">1 gb of space</div>
+                        <div class="section-pricing__prices-content">1 gb of space</div>
+                        <div class="section-pricing__prices-content">1 gb of space</div>
+                        <div class="section-pricing__prices-content">1 gb of space</div>
+                    </div>
+                    <div class="section-pricing__prices">
+                        <div class="section-pricing__prices-title">OPTIMA</div>
+                        <div class="section-pricing__prices-bucks">$20</div>
+                        <div class="section-pricing__prices-free">Free for life</div>
+                        <div class="section-pricing__prices-content">1 gb of space</div>
+                        <div class="section-pricing__prices-content">1 gb of space</div>
+                        <div class="section-pricing__prices-content">1 gb of space</div>
+                        <div class="section-pricing__prices-content">1 gb of space</div>
+                        <div class="section-pricing__prices-content">1 gb of space</div>
+                        <div class="section-pricing__prices-content">1 gb of space</div>
+                    </div>
+                    <div class="section-pricing__prices">
+                        <div class="section-pricing__prices-title">PRO</div>
+                        <div class="section-pricing__prices-bucks">$300</div>
+                        <div class="section-pricing__prices-free">Free for life</div>
+                        <div class="section-pricing__prices-content">1 gb of space</div>
+                        <div class="section-pricing__prices-content">1 gb of space</div>
+                        <div class="section-pricing__prices-content">1 gb of space</div>
+                        <div class="section-pricing__prices-content">1 gb of space</div>
+                        <div class="section-pricing__prices-content">1 gb of space</div>
+                        <div class="section-pricing__prices-content">1 gb of space</div>
+                    </div>
                 </div>
             </div>
         </div>
