adaptive finaly done?

--- a/layout.html
+++ b/layout.html
@@ -41,9 +41,9 @@
     </div>
     <div class="section-tabs">
         <div class="section-tabs__container">
-            <input class="hidden-radio" id="hidden-radio-first-item" name="group" type="radio" checked>
-            <input class="hidden-radio" id="hidden-radio-second-item" name="group" type="radio">
-            <input class="hidden-radio" id="hidden-radio-third-item" name="group" type="radio">
+            <input class="hidden-radio" id="hidden-radio-first-item" name="group-1" type="radio" checked>
+            <input class="hidden-radio" id="hidden-radio-second-item" name="group-1" type="radio">
+            <input class="hidden-radio" id="hidden-radio-third-item" name="group-1" type="radio">
             <div class="section-tabs__tabs">
                 <label class="section-tabs__first-tab" for="hidden-radio-first-item">TAB 1</label>
                 <label class="section-tabs__second-tab" for="hidden-radio-second-item">TAB 2</label>
@@ -178,42 +178,51 @@
     </div>
     <div class="section-reviews">
         <div class="section-reviews__container">
+            <input class="hidden-radio-2" id="hidden-radio-2-first-item" name="group-2" type="radio">
+            <input class="hidden-radio-2" id="hidden-radio-2-second-item" name="group-2" type="radio" checked>
+            <input class="hidden-radio-2" id="hidden-radio-2-third-item" name="group-2" type="radio">
             <div class="section-reviews__header">
                 <h2 class="section-reviews__header-title">what our customers are saying</h2>
                 <h5 class="section-reviews__header-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h5>
             </div>
             <div class="section-reviews__text-bubbles">
-                <div class="section-reviews__qoutes">Lorem ipsum dolor sit amet, <br>
+                <div class="section-reviews__qoutes" id="section-reviews__first-qoute">Lorem ipsum dolor sit amet, <br>
                 consectetur adipisicing elit. Doloribus <br>
                 accusamus expedita repellat similique <br>
                 odio aspernatur ex, architecto eaque <br>
                 quo suscipit.</div>
-                <div class="section-reviews__qoutes">Lorem ipsum dolor sit amet, <br>
+                <div class="section-reviews__qoutes" id="section-reviews__second-qoute">Lorem ipsum dolor sit amet, <br>
                 consectetur adipisicing elit. Doloribus <br>
                 accusamus expedita repellat similique <br>
                 odio aspernatur ex, architecto eaque <br>
                 quo suscipit.</div>
-                <div class="section-reviews__qoutes">Lorem ipsum dolor sit amet, <br>
+                <div class="section-reviews__qoutes" id="section-reviews__third-qoute">Lorem ipsum dolor sit amet, <br>
                 consectetur adipisicing elit. Doloribus <br>
                 accusamus expedita repellat similique <br>
                 odio aspernatur ex, architecto eaque <br>
                 quo suscipit.</div>
             </div>
             <div class="section-reviews__employees-container">
-                <div class="section-reviews__employees">
+                <div class="section-reviews__employees" id="section-reviews__first-employee">
                     <img src="images/Davis.png" alt="image">
                     <h4 class="section-reviews__employees-names">Davis Rhiel Madsen</h4>
                     <h5 class="section-reviews__employess-positions">Manager</h5>
                 </div>
-            <div class="section-reviews__employees">
+                <div class="section-reviews__employees" id="section-reviews__second-employee">
                     <img src="images/Jaydon.png" alt="image">
                     <h4 class="section-reviews__employees-names">Jaydon Rosser</h4>
                     <h5 class="section-reviews__employess-positions">Manager</h5>
-            </div>
-            <div class="section-reviews__employees">
+                </div>
+                <div class="section-reviews__employees" id="section-reviews__third-employee">
                     <img src="images/Cooper.png" alt="image">
                     <h4 class="section-reviews__employees-names">Cooper Dorwart</h4>
                     <h5 class="section-reviews__employess-positions">Manager</h5>
+                </div>
+            </div>
+            <div class="section-reviews__dots">
+                <label class="section-reviews__first-dot" for="hidden-radio-2-first-item"></label>
+                <label class="section-reviews__second-dot" for="hidden-radio-2-second-item"></label>
+                <label class="section-reviews__third-dot" for="hidden-radio-2-third-item"></label>
             </div>
         </div>
     </div>
